tests/invalid/invalid_symbol.lang
extern fn main() void {
    var hello: i32 = a;
}
